@@ -1,3 +1,9 @@
+Fri May 31 11:07:25 2002  Douglas C. Schmidt  <schmidt@macarena.cs.wustl.edu>
+
+	* examples/C++NPv2/AC_Client_Logging_Daemon.cpp: Modified this 
+	  so use pointers rather than references to simplify things in
+	  the book.
+
 Thu May 30 18:02:35 2002  Douglas C. Schmidt  <schmidt@macarena.cs.wustl.edu>
 
 	* ace/OS.h: Changed EACESS to EACCES to be POSIX compliant.  Thanks
